[package]
name = "pmw3360-rs"
version = "0.1.0"
authors = ["kot149", "Schievel"]
description = "PMW3610 Mouse Sensor Driver for Embassy/RMK"
repository = "https://github.com/Schievel1/pmw3360-rs"
readme = "README.md"
edition = "2024"
license = "Apache-2.0"
keywords = ["pmw3360", "mouse", "sensor", "embedded", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]

[features]
default = []

# RMK integration (optional)
rmk = ["dep:rmk"]

[dependencies]
defmt = "1.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embassy-time = { version = "0.5", features = ["defmt"] }

# Optional RMK integration
rmk = { version = "0.8", optional = true }
